--- a/src/Components/Defination/Definetable.css
+++ b/src/Components/Defination/Definetable.css
@@ -1,4 +1,4 @@
-.tableBtn {
+/* .tableBtn {
   border-radius: 5px;
   background-color: #333;
   color: white;
@@ -7,7 +7,7 @@
   text-align: center;
   width: 150px;
   height: 75px;
-}
+} */
 
 .addTableBtn {
   width: 150px;
@@ -15,4 +15,11 @@
 }
 .addPlace {
   background-color: red !important;
+}
+.card-body {
+  height: 700px;
+  overflow: hidden;
+}
+.card-body:hover {
+  overflow-y: auto;
 }
