--- a/src/Components/Order Screen/OrderScreen.css
+++ b/src/Components/Order Screen/OrderScreen.css
@@ -1,4 +1,4 @@
-/* .tableBtn {
+.tableBtn {
   border-radius: 5px;
   background-color: #333;
   color: white;
@@ -7,19 +7,13 @@
   text-align: center;
   width: 150px;
   height: 75px;
-} */
+}
 
-.addTableBtn {
-  width: 150px;
-  height: 75px;
-}
-.addPlace {
-  background-color: red !important;
-}
-.card-body {
+.categoryAccordion {
   height: 700px;
   overflow: hidden;
 }
-.card-body:hover {
+
+.categoryAccordion:hover {
   overflow-y: auto;
 }
